add post order OpenAPI documentation
